# leo

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  download_dataset.sh  download_local_files.sh  leocpp.h  logo.h
leocpp/: CMakeLists.txt  config.h.in
leocpp/contact/: CMakeLists.txt  TactileRelativeTfRegressionFactor.h
leocpp/dynamics/: CMakeLists.txt  QSVelPushMotionRealObjEEFactor.h
leocpp/geometry/: CMakeLists.txt  IntersectionPlanarSDFObjEEFactor.h
leopy/: setup.py
leopy/config/baselines/: lstm_net_test.yaml  lstm_net_train.yaml
leopy/config/dataio/: nav2d.yaml  push2d.yaml
leopy/config/examples/: leo_nav2d.yaml  leo_push2d.yaml  regression.yaml
leopy/requirements/: requirements.txt
leopy/scripts/analysis/: regression_analysis.py  visualize_traj_samples.py
leopy/scripts/baselines/: blackbox_nav2d.py  lstm_utils.py  test_lstm_net.py  train_lstm_net.py
leopy/scripts/examples/: leo_nav2d.py  leo_push2d.py  regression.py
leopy/src/leopy/algo/: leo_obs_models.py  leo_update.py
leopy/src/leopy/dataio/: data_process.py  generate_nav2dsim_dataset.py  generate_nav2dsim_time_varying_dataset.py  generate_push2dreal_dataset.py
leopy/src/leopy/eval/: quant_metrics.py
leopy/src/leopy/optim/: cost.py  gtsamopt.py  nav2d_factors.py  push2d_factors.py  sampler.py
leopy/src/leopy/utils/: dir_utils.py  logger.py  tf_utils.py  vis_utils.py
logo/: CMakeLists.txt
logo/contact/: CMakeLists.txt  TactileRelativeTfRegressionFactor.h
logo/dynamics/: CMakeLists.txt  QSVelPushMotionRealObjEEFactor.h
logo/geometry/: CMakeLists.txt  IntersectionPlanarSDFObjEEFactor.h
logo/utils/: CMakeLists.txt
python/: setup.py
python/config/: logo_nav2d_gtsam.yaml  logo_push2d_gtsam.yaml
python/config/dataio/: nav2d.yaml
python/examples/: logo_nav2d_gtsam.py  logo_push2d_gtsam.py
python/src/logopy/algo/: logo_obs_models.py  logo_update.py
python/src/logopy/dataio/: data_process.py  generate_nav2dsim_dataset.py  generate_nav2dsim_time_varying_dataset.py  generate_push2dreal_dataset.py
python/src/logopy/eval/: quant_metrics.py
python/src/logopy/optim/: cost.py  gtsamopt.py  nav2d_factors.py  push2d_factors.py  sampler.py
python/src/logopy/utils/: Logger.py  dir_utils.py  tf_utils.py  vis_utils.py
python/tests/: test_covariance_pose2.py  test_py_wrapper.py  test_transforms_2d.py
